# k8s-leader-election

./: Cargo.toml  README.md
src/: lease.rs  lib.rs
