[package]
name = "k8s-leader-election"
version = "0.1.0"
edition = "2021"

[dependencies]
k8s-openapi = { version = "0.13", default-features = false, features = ["v1_20"] }
kube = "0.66"
thiserror = "1"
serde_json = "1"
tokio = { version = "1.15", features = ["rt", "macros"] }
chrono = "0.4"
http = "0.2"
log = "0.4"
tokio-retry = "0.3"
futures = "0.3"

[dev-dependencies]
test-context = "0.1"
async-trait = "0.1.52"
futures = "0.3"
env_logger = "0.9"
rand = "0.8"
taken = "0.1"
